--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,12 @@
 version: "3.3"
 services:
   step-ca:
-    network_mode: "host"
     build:
       context: .
       dockerfile: Dockerfile
       args: 
         VERSION: ${VERSION}
-    image: "praqma/step-ca:${VERSION:-latest}"
+    image: "services/step-ca:${VERSION:-latest}"
     container_name: "step-ca"
     environment:
       - DNS_NAMES=${DNS_NAMES:-localhost}
