--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Set the version of ca to build. Note this is passed as ARG to build.
-VERSION=0.14.6
+VERSION=0.18.0
 
 # Comma seperated list of the DNS names for the CA
-DNS_NAMES=internalCA.thedukedk.net,localhost
+DNS_NAMES=ca.tft,localhost
 
 # How long certs are valid. Defaults to 720h.
 DEFAULT_CERT_VALIDITY=
@@ -10,12 +10,10 @@ DEFAULT_CERT_VALIDITY=
 # Maximum cert validity. Defaults to 2160h.
 MAX_CERT_VALIDITY=
 
-HELLOWORLD_VERSION=1.0.0
-
-SERVER_PROXY_NAME=helloworld.thedukedk.net
+SERVER_PROXY_NAME=index.tft
 
 # Todo: This should be a file. This is too insecure. But this is just demo stuff.
 FINGERPRINT=
-CERT_AUTH=https://internalCA.thedukedk.net
+CERT_AUTH=https://ca.tft
 CERT_AUTH_PORT=8443
 CERT_AUTH_PROVISIONER=acme
